terraform/mirror-maker-cluster/security_group.tf
resource "aws_security_group" "this" {
  name        = "kafka-connect"
  description = "Security group for Kafka Connect"
  vpc_id      = var.vpc_id
  ingress {
    from_port   = 8083
    to_port     = 8083
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  ingress {
    from_port   = 3600
    to_port     = 3600
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }
}
